crates/gossamer-diagnostics/tests/snapshots/GP0043.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0043]: A `mod` declaration ended in `;`. A statement ends at its newline - here
--- framed ---
error[GP0043]: A `mod` declaration ended in `;`. A statement ends at its newline
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
