crates/gossamer-diagnostics/tests/snapshots/GP0044.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0044]: A callable type was written as `fn`, `FnMut`, or `FnOnce`. The - here
--- framed ---
error[GP0044]: A callable type was written as `fn`, `FnMut`, or `FnOnce`. The
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
