crates/gossamer-diagnostics/tests/snapshots/GP0045.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0045]: An argument label was bound with `=`. Every keyed form in the - here
--- framed ---
error[GP0045]: An argument label was bound with `=`. Every keyed form in the
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
