crates/gossamer-diagnostics/tests/snapshots/GP0046.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0046]: `unsafe` was written. No operation is withheld outside an `unsafe` - here
--- framed ---
error[GP0046]: `unsafe` was written. No operation is withheld outside an `unsafe`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
