crates/gossamer-diagnostics/tests/snapshots/GP0047.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0047]: An opaque alias was written `type X = new T`. `new` reads as - here
--- framed ---
error[GP0047]: An opaque alias was written `type X = new T`. `new` reads as
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
