crates/gossamer-diagnostics/tests/snapshots/GP0050.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0050]: An `enum Name : R` named a representation that is not an unsigned - here
--- framed ---
error[GP0050]: An `enum Name : R` named a representation that is not an unsigned
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
