crates/gossamer-diagnostics/tests/snapshots/GP0052.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0052]: `sql::statement` was handed something other than a literal. The - here
--- framed ---
error[GP0052]: `sql::statement` was handed something other than a literal. The
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
